[package]
name = "nkmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the zlib version of flate2 is about twice as fast as the default, but requires cmake to build
# flate2 = "*"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
clap = { version = "*", features = ["derive"]}
dashmap = "*"
fxhash = "*"
rustc-hash = "*"
nohash-hasher = "*"
bloom = "*"
sprs = "*"
rdxsort = "*"